...
                    modifier = modifier,
                    title = { Text(text = actionBarTitle) },
                    navigationIcon = if (currentRoute == Screen.DetailMovie.route) {
                        {
                            IconButton(
                                onClick = { navController.navigateUp() },
                                modifier = Modifier.testTag("back_button")
                            ) {
                                Icon(
                                    imageVector = Icons.Default.ArrowBack,
                                    contentDescription = "Back"
                                )
                            }
...
                                        launchSingleTop = true
                                        restoreState = true
                                    }
                                },
                                modifier = Modifier
                                    .semantics(mergeDescendants = true){
                                        contentDescription = "search"
                                    }
                            ) {
                                Icon(
                                    imageVector = Icons.Default.Search,
                                    contentDescription = null
                                )
...
