...
                text = title,
                fontSize = 20.sp,
                color = Color.Black,
                fontWeight = FontWeight.Bold,
                modifier = Modifier
                    .semantics(mergeDescendants = true){
                        contentDescription = "movie_title"
                    }
            )
            Text(
                text = releaseDate,
                fontSize = 12.sp,
                color = Color.Gray,
...
